Started on questioncreation, testing to make sure selecting type, question type, or stat type works.

--- a/app/makefile
+++ b/app/makefile
@@ -1,1 +1,8 @@
+qc_compile qc_program: questioncreation.o
+	@gcc -Wall -o qc_program questioncreation.o
 
+questioncreation.o: questioncreation.c
+	@gcc -c questioncreation.c
+
+qc_run: qc_program
+	@./qc_program
