--- a/app/makefile
+++ b/app/makefile
@@ -6,3 +6,23 @@ questioncreation.o: questioncreation.c questioncreation.h
 
 qc_run: qc_program
 	@./qc_program
+
+compile: server client
+
+server: server.o networking.o
+	gcc -o server server.o networking.o
+
+client: client.o networking.o
+	gcc -o client client.o networking.o
+
+server.o: server.c networking.h
+	gcc -c server.c
+
+client.o: client.c networking.h
+	gcc -c client.c
+
+networking.o: networking.c networking.h
+	gcc -c networking.c
+
+clean:
+	rm -f *.o server client .server_ip
