subserver logic completed? errors  truncation ignored, look into later.

--- a/app/makefile
+++ b/app/makefile
@@ -1,22 +1,22 @@
 qc_compile qc_program: questioncreation.o
-	@gcc -Wall -o qc_program questioncreation.o
-
-questioncreation.o: questioncreation.c questioncreation.h
-	@gcc -c questioncreation.c
+	gcc -Wall -o qc_program questioncreation.o
 
 qc_run: qc_program
-	@./qc_program
+	./qc_program
 
 compile: server client
 
-server: server.o networking.o
-	gcc -o server server.o networking.o
+server: server.o networking.o questioncreation.o
+	gcc -o server server.o networking.o questioncreation.o
+
+questioncreation.o: questioncreation.c questioncreation.h
+	gcc -c questioncreation.c
 
 client: client.o networking.o
 	gcc -o client client.o networking.o
 
-server.o: server.c networking.h
-	gcc -c server.c
+server.o: server.c networking.h questioncreation.h
+	gcc -c -Wno-format-truncation server.c
 
 client.o: client.c networking.h
 	gcc -c client.c
@@ -25,4 +25,4 @@ networking.o: networking.c networking.h
 	gcc -c networking.c
 
 clean:
-	rm -f *.o server client .server_ip
+	rm -f *.o server client qc_program .server_ip
